--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -75,11 +73,11 @@
     window.onload = function() {
         var str = '',
             data = [
-                { url : 'weibo.html', title : '微博效果' },
-                { url : 'changeskin.html', title : '网页换肤' },
-                { url : 'slideshow.html', title : '幻灯片效果' },
-                { url : 'changedivattr.html', title : '控制div属性' },
-                { url : 'prefectdrag.html', title : '拖拽效果' },
+                { url : 'works/weibo.html', title : '微博效果' },
+                { url : 'works/changeskin.html', title : '网页换肤' },
+                { url : 'works/slideshow.html', title : '幻灯片效果' },
+                { url : 'works/changedivattr.html', title : '控制div属性' },
+                { url : 'works/prefectdrag.html', title : '拖拽效果' },
             ];
         for(var i = 0; i < data.length; i++){
             var sub = '';
